# openapi_korea_mcp_server

./: .gitignore  README.md  mcp_config_example.json  pyproject.toml  test_mcp_server.py
.gemini/: settings sample.json  settings.json
.kiro/specs/korean-openapi-mcp-server/: requirements.md
docs/: prompts.md
src/openapi_korea/: __init__.py  resource_file.md  server.py  server_claude.py
src/openapi_korea.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
